# parallel-research-cli

./: .gitignore  LICENSE  README.md  example.py  example.sh  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py
cmd/: main.go
essayforge/: cli.py
essayforge/agents/: __init__.py  advanced_agents.py  agents.py
essayforge/models/: __init__.py  models.py
essayforge/orchestrator/: __init__.py  orchestrator.py
essayforge/output/: __init__.py
essayforge/synthesis/: __init__.py  synthesizer.py
essayforge/ui/: __init__.py  dashboard.py
essayforge_python/: CONVERSION_SUMMARY.md  README.md  essay.md  main.py  requirements.txt  setup.py
essayforge_python/essayforge/: __init__.py
essayforge_python/essayforge/agents/: __init__.py  advanced_agents.py  agents.py
essayforge_python/essayforge/models/: __init__.py  models.py
essayforge_python/essayforge/orchestrator/: __init__.py  orchestrator.py
essayforge_python/essayforge/output/: __init__.py  formatter.py
essayforge_python/essayforge/synthesis/: __init__.py  synthesis.py
essayforge_python/essayforge/ui/: __init__.py  dashboard.py
output/: egyptian_babylonian_parallel_gemini.md
pkg/agents/: advanced_agents.go  agents.go
pkg/evaluator/: evaluator.go  rubric.go
pkg/models/: models.go
pkg/orchestrator/: unified_orchestrator.go
pkg/output/: formatter.go
pkg/synthesis/: synthesis.go
pkg/ui/: dashboard.go
